@@ -8,74 +8,62 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
-
+import java.util.Collections;
+import java.util.Locale;
 
 @Getter
 @AllArgsConstructor
 public class CustomUserDetails implements UserDetails {
 
-
     private final User user;
-
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
 
-        return List.of(
-                new SimpleGrantedAuthority(
-                        "ROLE_" + user.getRole().getRoleName()
-                )
+        if (user.getRole() == null ||
+                user.getRole().getRoleName() == null ||
+                user.getRole().getRoleName().isBlank()) {
+
+            return Collections.emptyList();
+        }
+
+        String roleName = user.getRole()
+                .getRoleName()
+                .trim()
+                .toUpperCase(Locale.ROOT);
+
+        return Collections.singletonList(
+                new SimpleGrantedAuthority("ROLE_" + roleName)
         );
-
     }
-
 
     @Override
     public String getPassword() {
-
         return user.getPassword();
-
     }
-
 
     @Override
     public String getUsername() {
-
         return user.getUsername();
-
     }
-
 
     @Override
     public boolean isAccountNonExpired() {
-
         return true;
-
     }
-
 
     @Override
     public boolean isAccountNonLocked() {
-
         return true;
-
     }
-
 
     @Override
     public boolean isCredentialsNonExpired() {
-
         return true;
-
     }
-
 
     @Override
     public boolean isEnabled() {
-
         return Boolean.TRUE.equals(user.getIsActive());
-
     }
-
 }
